--- a/app/views/layouts/products/index.html.erb
+++ b/app/views/layouts/products/index.html.erb
@@ -1,1 +1,11 @@
-<%= @item %>
+<ul>
+  <%= cart.each do |item| %>
+    <li><%= item %></li>
+    <% end %>
+</ul>
+
+
+<%= form_tag ({controller: 'products', action: "add_to_cart", method: "post"}) do %>
+  <input name= 'product'>
+  <input type='submit' value='add to cart'>
+<% end %>
