--- a/app/views/layouts/products/index.html.erb
+++ b/app/views/layouts/products/index.html.erb
@@ -6,6 +6,6 @@
 
 
 <%= form_tag ({controller: 'products', action: "add_to_cart", method: "post"}) do %>
-  <input name= 'item'>
+  <input name= 'product'>
   <input type='submit' value='add to cart'>
 <% end %>
