Automatically backed up by Learn

--- a/app/views/layouts/products/index.html.erb
+++ b/app/views/layouts/products/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
-  <%= cart.each do |item| %>
-    <li><%= item %></li>
+  <%= cart.each do |product| %>
+    <li><%= product %></li>
     <% end %>
 </ul>
 
