Automatically backed up by Learn

--- a/app/views/layouts/products/index.html.erb
+++ b/app/views/layouts/products/index.html.erb
@@ -5,7 +5,7 @@
 </ul>
 
 
-<%= form_tag ({controller: 'products', action: "add_to_cart", method: "post"}) do %>
+<%= form_tag ({controller: 'products', action: "add", method: "post"}) do %>
   <input name= 'product'>
   <input type='submit' value='add to cart'>
 <% end %>
